--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "autoprefixer": "^10.4.2",
     "daisyui": "^1.25.4",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^1.0.7",
     "tailwindcss": "^3.0.17",
     "typescript": "^4.4.4",
