--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.2",
+    "axios": "^0.25.0",
     "daisyui": "^1.25.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
