--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.8",
     "autoprefixer": "^10.4.2",
     "axios": "^0.25.0",
     "daisyui": "^1.25.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1"
+    "react-hook-form": "^7.25.3",
+    "react-router-dom": "^6.2.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
