--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.8.8",
+    "@reduxjs/toolkit": "^1.7.2",
     "autoprefixer": "^10.4.2",
     "axios": "^0.25.0",
     "daisyui": "^1.25.4",
     "firebase": "^9.6.5",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.3",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "yup": "^0.32.11"
   },
